# intake

./: .gitignore  LICENSE  README.md  pyproject.toml
context_shield/: __init__.py  audit.py  context.py  exceptions.py  guard.py  policy.py  provenance.py  shield.py  tagger.py  types.py
demo/: agent.py  mock_inbox.py  policy.yaml  run_protected.py  run_unprotected.py  tools.py
docs/: architecture.md  threat-model.md
fixtures/policies/: basic.yaml  priority_override.yaml  wildcard.yaml
fixtures/test_vectors/: policy_evals.json
intake_shield/: __init__.py  audit.py  context.py  exceptions.py  guard.py  policy.py  provenance.py  shield.py  tagger.py  types.py
rust/intake-core/: Cargo.toml
rust/intake-core/src/: context.rs  error.rs  lib.rs  policy.rs  types.rs
rust/intake-core/tests/: context_tests.rs  policy_tests.rs
tests/: conftest.py  test_context.py  test_guard.py  test_policy.py  test_provenance.py  test_shield_integration.py  test_tagger.py
