[package]
name = "intake-core"
version = "0.1.0"
edition = "2021"
description = "Trust boundary enforcement for AI agents — policy engine and context annotations"
license = "Apache-2.0"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "deny"
